fix: refine-sidebar z-index

--- a/edx-platform/wikilearn/lms/static/sass/components/_refine-sidebar.scss
+++ b/edx-platform/wikilearn/lms/static/sass/components/_refine-sidebar.scss
@@ -1,5 +1,6 @@
 .find-courses {
   .search-facets {
+    z-index: 1;
     .facet-header-container {
       display: flex;
       flex-direction: row;
